# token-efficiency-benchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORICAL.md  LICENSE  MAINTAINERS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: adapter_proposal.md  bug_report.md  rfc.md
.github/workflows/: ci.yml
benchmark_data/runs/20260702T183746Z_346427/: ANALYSIS.md  manifest.json  results.jsonl  tasks.jsonl
benchmark_data/runs/20260703T070656Z_098392/: ANALYSIS.md  VALIDATION.md  manifest.json  results.jsonl  tasks.jsonl
benchmark_data/runs/20260706T203221Z_464996/: manifest.json  results.jsonl  tasks.jsonl
benchmark_data/runs/20260706T222112Z_412022-paired/: ANALYSIS.md  manifest.json  results.jsonl  tasks.jsonl
docs/: ROADMAP.md  design_v2.md  examples_v2.md  motivation.md  related_work.md
pricing/: prices.json
scripts/: run_depth_ladder.py  run_eval.py
src/token_efficiency_benchmark/: __init__.py  cli.py  serialization.py  types.py
src/token_efficiency_benchmark/evaluation/: __init__.py  consistency_scoring.py  harness.py  live_models.py  models.py  pricing.py  reporting.py  scoring.py  tokenization.py
src/token_efficiency_benchmark/families/: __init__.py  arithmetic_chain.py  base.py  hybrid.py  paired_ladder.py  program_output.py  table_aggregation.py
tests/: conftest.py  test_business_view.py  test_cli.py  test_consistency_scoring.py  test_family_arithmetic_chain.py  test_family_hybrid.py  test_family_program_output.py  test_family_table.py  test_live_models.py  test_paired_ladder.py  test_pricing.py  test_provider_usage.py  test_reporting.py  test_scoring.py  test_serialization.py
