[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "token-efficiency-benchmark"
version = "2.0.0"
description = "Measures dollars per correct outcome on LLMs with runtime-generated, contamination-resistant tasks"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Token Efficiency Benchmark Contributors" },
]
keywords = ["llm", "benchmark", "evaluation", "reasoning", "mdp", "token-efficiency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "pydantic>=2.6",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
openai = [
    "openai>=1.30",
]
anthropic = [
    "anthropic>=0.30",
]
all = [
    "openai>=1.30",
    "anthropic>=0.30",
]

[project.scripts]
teb = "token_efficiency_benchmark.cli:main"

[project.urls]
Homepage = "https://github.com/novigens/token-efficiency-benchmark"
Documentation = "https://github.com/novigens/token-efficiency-benchmark/tree/main/docs"
Issues = "https://github.com/novigens/token-efficiency-benchmark/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
token_efficiency_benchmark = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["tiktoken", "openai", "anthropic"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
